--- a/.env
+++ b/.env
@@ -51,3 +51,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 INSTAGRAM_CLIENT_SECRET="5d2380e274c1e42319162d18d4574512"
 INSTAGRAM_CLIENT_ID="1367835163739322"
 
+
+MAILCHIMP_APIKEY="18bed8b5738f6215ade11ac0e3965e0f-us8"
+MAILCHIMP_LIST_ID="3809e8378c"
