--- a/.env
+++ b/.env
@@ -54,3 +54,11 @@ INSTAGRAM_CLIENT_ID="1367835163739322"
 
 MAILCHIMP_APIKEY="18bed8b5738f6215ade11ac0e3965e0f-us8"
 MAILCHIMP_LIST_ID="3809e8378c"
+
+GOOGLE_ACCESS_KEY_ID=""
+GOOGLE_SECRET_ACCESS_KEY=""
+GOOGLE_REDIRECT="https://aste.co.ke/google/redirect"
+
+FACEBOOK_APP_ID="321077706884143"
+FACEBOOK_APP_SECRET="fba419be402731b8267aadffe4bdfaa2"
+FACEBOOK_REDIRECT="https://aste.co.ke/facebook/redirect"
