--- a/.env
+++ b/.env
@@ -55,8 +55,8 @@ INSTAGRAM_CLIENT_ID="1367835163739322"
 MAILCHIMP_APIKEY="18bed8b5738f6215ade11ac0e3965e0f-us8"
 MAILCHIMP_LIST_ID="3809e8378c"
 
-GOOGLE_ACCESS_KEY_ID=""
-GOOGLE_SECRET_ACCESS_KEY=""
+GOOGLE_ACCESS_KEY_ID="498267003212-bb1gtfc8uov51gakoi6eeeutu31ojv83.apps.googleusercontent.com"
+GOOGLE_SECRET_ACCESS_KEY="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"
 GOOGLE_REDIRECT="https://aste.co.ke/google/redirect"
 
 FACEBOOK_APP_ID="321077706884143"
