--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "javcorreia/laravel-wishlist": "^2.0",
         "laravel/framework": "^8.12",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
