--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=aste
 DB_USERNAME=root
-DB_PASSWORD=1234567890
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
