--- a/.htaccess
+++ b/.htaccess
@@ -7,20 +7,33 @@
     </ifmodule>
      
     RewriteEngine On 
-    RewriteEngine On
-    RewriteCond %{HTTP_HOST} !^aste.co.ke$
-RewriteRule ^(.*)$ https://aste.co.ke/public/$1 [R=301,L]
-     
-    RewriteCond %{REQUEST_FILENAME} -d [OR]
-    RewriteCond %{REQUEST_FILENAME} -f
-    RewriteRule ^ ^$1 [N]
- 
-    RewriteCond %{REQUEST_URI} (\.\w+$) [NC]
-    RewriteRule ^(.*)$ public/$1 
- 
+    # Handle Authorization Header
+    RewriteCond %{HTTP:Authorization} .
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
+    # Redirect Trailing Slashes If Not A Folder...
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_URI} (.+)/$
+    RewriteRule ^ %1 [L,R=301]
+
+    # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ server.php
+    RewriteRule ^ index.php [L]
+
+    #RewriteCond %{HTTP_HOST} !^aste.co.ke$
+    #RewriteRule ^(.*)$ https://aste.co.ke/public/$1 [R=301,L]
+     
+    #RewriteCond %{REQUEST_FILENAME} -d [OR]
+    #RewriteCond %{REQUEST_FILENAME} -f
+    #RewriteRule ^ ^$1 [N]
+ 
+    #RewriteCond %{REQUEST_URI} (\.\w+$) [NC]
+    #RewriteRule ^(.*)$ public/$1 
+ 
+    #RewriteCond %{REQUEST_FILENAME} !-d
+    #RewriteCond %{REQUEST_FILENAME} !-f
+    #RewriteRule ^ server.php
  
 </ifmodule>
 
@@ -61,9 +74,4 @@ order allow,deny
 Deny from all
 </Files>
 
-# php -- BEGIN cPanel-generated handler, do not edit
-# Set the “ea-php80” package as the default “PHP” programming language.
-<IfModule mime_module>
-  AddHandler application/x-httpd-ea-php80 .php .php8 .phtml
-</IfModule>
-# php -- END cPanel-generated handler, do not edit
+
